Add minima theme to configuration

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ url: "https://sinhp.github.io/slug"
 markdown: kramdown
 highlighter: rouge
 
+theme: minima
+
 # Social links
 github_username: sinhp
 
